--- a/style.css
+++ b/style.css
@@ -7,12 +7,19 @@ nav {
     margin: 0px;
     text-align: center;
   }
+
   nav ul {
     padding: 0px;
   }
+
   nav li {
     display: inline-block;
     padding: 5px;
     margin-right: 40px;
     font-family: futura, sans-serif;
   }
+
+section.input {
+  background: rgba(56, 177, 165, 0.773);
+  font: black;
+}
